--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -266,7 +266,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/mulher-negra-com-moletom-verde-com-as-duas-maos-no-peito.png"
+            src="./assets/mulher-negra-com-moletom-verde-com-as-duas-maos-no-peito.png"
             alt="Mulher negra vestindo um moletom verde com as duas mãos no peito e sorrindo"
           />
           <!-- caso nao encontre a imagem ou tenha algum erro, aparecera um icon e a descrição que está em "alt", e também é descrito para pessoas deficientes visuais-->
@@ -477,7 +477,7 @@
         </div>
         <div class="col-b">
           <img
-            src="assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
+            src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
             alt="Doutor feliz segurando prancheta com pacientes"
           />
         </div>
@@ -570,7 +570,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
+            src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
             alt="Homem negro com moletom bege mexendo no celular e sorrindo"
           />
         </div>
@@ -752,6 +752,6 @@
     <!-- ScrollReveal library -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
