--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <ul class="social-links">
             <li>
               <!--o target _blank é para qnd clicar no link abrir em uma aba nova e nao sair do seu site-->
-              <a target="_blank" href="https://instagram.com/jaqueyano">
+              <a target="_blank" href="https://instagram.com/">
                 <svg
                   width="24"
                   height="24"
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://facebook.com/jaquelineyano">
+              <a target="_blank" href="https://facebook.com/">
                 <svg
                   width="24"
                   height="24"
@@ -641,7 +641,7 @@
           <ul class="social-links">
             <li>
               <!--o target _blank é para qnd clicar no link abrir em uma aba nova e nao sair do seu site-->
-              <a target="_blank" href="https://instagram.com/jaqueyano">
+              <a target="_blank" href="https://instagram.com/">
                 <svg
                   width="24"
                   height="24"
@@ -674,7 +674,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://facebook.com/jaquelineyano">
+              <a target="_blank" href="https://facebook.com/">
                 <svg
                   width="24"
                   height="24"
