ajuste de links3

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             <a
               class="button"
               target="_blank"
-              href="https://wa.me/5511968091187"
+              href="https://www.whatsapp.com/?lang=pt_br"
             >
               <svg
                 width="24"
